<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Statustician</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="battery"><u>Battery Status</u></string>
    <string name="start_btn">Start Service</string>
    <string name="stop_btn">Stop Service</string>
    <string name="tips"><u>Battery Tips</u></string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>

</resources>
